# flockwave-net

./: README.md  pyproject.toml  tbump.toml
.github/workflows/: pytest.yml
src/flockwave/: networking.py
src/flockwave/networking/: __init__.py  _darwin.py  addressing.py  interfaces.py  scanner.py  sockets.py  utils.py  version.py  wired.py  wireless.py
test/: test_buffer_sizes.py
