[tool.poetry]
name = "flockwave-net"
version = "5.0.0"
description = "Networking related functions for apps based on the Flockwave framework"
authors = ["Tamas Nepusz <tamas@collmot.com>"]
packages = [
    { include = "flockwave", from = "src" }
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
netifaces-plus = ">=0.11.0"
trio = { version = ">=0.19.0", optional = true }
aio-net-events = { version = "^6.0.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
pytest-trio = ">=0.6.0"
pytest-cov = "^4.1.0"
coverage = {extras = ["toml"], version = "^7.0"}

[tool.poetry.extras]
async = ["aio-net-events", "trio"]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "collmot"
url = "https://pypi.collmot.com/simple/"
priority = "explicit"

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
priority = "supplemental"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
