[project]
name = "flockwave-net"
version = "7.0.3"
description = "Networking related functions for apps based on the Flockwave framework"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com>" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "netifaces-plus>=0.12.2"
]

[project.optional-dependencies]
async = [
  "aio-net-events>=8.0.1",
  "trio>=0.24.0"
]

[tool.poetry]
packages = [
    { include = "flockwave", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-trio = ">=0.8.0"
pytest-cov = "^6.1.1"
coverage = {extras = ["toml"], version = "^7.0"}

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "collmot"
url = "https://pypi.collmot.com/simple/"
priority = "explicit"

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
priority = "supplemental"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
trio_mode = true

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
